# corona

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  corona.py  corona_history.py  landkreise.py  pyproject.toml  setup.cfg  setup.py  test_corona.py  test_corona_history.py  test_landkreise.py  tox.ini
.github/workflows/: python-unittest.yml
src/corona/: __init__.py  __main__.py  history.py  landkreise.py  rki_connector.py  today.py
test_data/: 16.json  19.json  27.json  3.json  8.json  Fallzahlen_Kum_Tab_aktuell.xlsx
tests/: test_history.py  test_landkreise.py  test_today.py  testing_utils.py
tests/test_data/: 413.json  51.json  7.json  80.json  87.json  Fallzahlen_Inzidenz_aktualisiert.xlsx  all.json  de.json
