[metadata]
name = corona
description = Connects to data from rki and displays it
author = Omega1902
license = GLP v2
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    corona
install_requires =
    aiohttp
    anyio
    asyncclick
    pandas==1.5.3
    matplotlib
    openpyxl
python_requires = >=3.9
package_dir =
    =src
zip_safe = no
